# PlanFromMap

./: .env.example  .gitignore  AI_GUIDELINES.md  MODULE_INDEX.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTORING_STRATEGY.md  TESTING.md  TEST_RESULTS.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements.txt  server.py  tsconfig.json  vitest.config.js
.archived/: README.md  package.json
.claude/: instructions.md  test_config.yaml
.claude/test_templates/: templates.py
.github/: CICD.md  README.md
.github/workflows/: pr-check.yml  scheduled-tests.yml  test.yml
apps/backend/: image_optimizer.py  server.py
apps/frontend/: server.py
apps/frontend/static/: index.html  index.html.backup
apps/frontend/static/js/: config.js  main.js
config/: README.md
docs/: 3D_MODULES_ANALYSIS.md  AI_GUIDELINES.md  ARCHITECTURE.md  MAP-EDITOR.md  MODULE_INDEX.md  OPERATION-CATALOG.md  PROFILE-FORMAT.md  QUICKSTART.md  VIEWCUBE.md
scripts/: run-tests.sh
tests/: README.md  __init__.py  claude_test_generator.py  conftest.py  pytest.ini  setup.js  test_runner.py  test_threejs_integration.py
tests/data/: test_profile.json
tests/e2e/: api-integration.spec.js  drawing-tools.spec.js  map-viewer.spec.js  test_full_workflow.py
tests/fixtures/: .gitkeep
tests/fixtures/profiles/: test_profile.json
tests/integration/: test_map_loading.py  test_profile_management.py  test_scenarios.py
tests/modules/: test_isometric_projection.py  test_layer_manager.py
tests/outputs/: .gitkeep
tests/test_cases/: drawing_tools.json  layer_management.json
tests/unit/backend/: __init__.py  conftest.py  test_api.py  test_health.py  test_mapql.py  test_maps.py  test_operations.py  test_stats.py
tests/unit/frontend/: __init__.py  test_coordinates.py  test_formatting.py  test_image_processing.py
tests/utils/: __init__.py  test_visualizer.py
(+60 files in other folders)
