[project]
name = "planfrommap"
version = "0.1.0"
description = "Semantic Map Platform for HSR - RoboCup@Home DSPL"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "TANUKIpro Team" }
]
keywords = ["robotics", "semantic-map", "hsr", "robocup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "flask>=3.0.0",
    "flask-cors>=4.0.0",

    # Database
    "sqlalchemy>=2.0.23",

    # Image Processing
    "numpy>=1.26.2",
    "pillow>=10.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",

    # Development
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
semantic-map = "server:main"

[project.urls]
Homepage = "https://github.com/TANUKIpro/PlanFromMap"
Documentation = "https://github.com/TANUKIpro/PlanFromMap/tree/main/docs"
Repository = "https://github.com/TANUKIpro/PlanFromMap"
Issues = "https://github.com/TANUKIpro/PlanFromMap/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
